inital commit of content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hey there</title>
+  <title>ColorGlass</title>
+  <link href= "../css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <h1>hyy</h1>
+  <section id="hero">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-offset-1 col-sm-4">
+          <h1>High End. Colorful. Screen Protection.</h1>
+          <a href="shop.html">Shop Now</a>
+        </div>
+        <div class="col-sm-offset-1 col-sm-6 hero-img-holder">
+          <img src="img/hero.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="value-props">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-7" >
+            <h2>plays nice with cases</h2>
+            <div class="top-holder text-center">
+              <h2>yoyoy</h2>
+              <img id="img-a" src="img/a.JPG" alt="guy holding phone">
+            </div>
+            <div class="bottom-holder text-center">
+                <!-- <h2>plays nice with cases</h2> -->
+              <img id="img-c" src="img/c.JPG" alt="woman holding phone with case">
+            </div>
+        </div>
+        <div class="col-sm-5 right-section">
+          <h2>HD Clarity</h2>
+          <img id="img-b" src="img/b.png" alt="girl hand holding phone">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr>
+  <br>
 </body>
 </html>
