--- a/index.html
+++ b/index.html
@@ -23,28 +23,24 @@
     </div>
   </section>
   <section id="value-props">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-7" >
-            <h2>plays nice with cases</h2>
-            <div class="top-holder text-center">
-              <h2>yoyoy</h2>
-              <img id="img-a" src="img/a.JPG" alt="guy holding phone">
-            </div>
-            <div class="bottom-holder text-center">
-                <!-- <h2>plays nice with cases</h2> -->
-              <img id="img-c" src="img/c.JPG" alt="woman holding phone with case">
-            </div>
+        <div class="col-sm-7 left-section" >
+          <h2>Plays Nice with Cases</h2>
+          <div class="top-holder text-center">
+            <img id="img-a" src="img/a.JPG" alt="guy holding phone">
+          </div>
+          <div class="bottom-holder text-center">
+              <!-- <h2>plays nice with cases</h2> -->
+            <img id="img-c" src="img/c.JPG" alt="woman holding phone with case">
+          </div>
         </div>
         <div class="col-sm-5 right-section">
           <h2>HD Clarity</h2>
-          <img id="img-b" src="img/b.png" alt="girl hand holding phone">
+          <img id="img-b" src="img/b.jpg" alt="girl hand holding phone">
         </div>
       </div>
     </div>
   </section>
-
-  <hr>
-  <br>
 </body>
 </html>
