Updating name to fix bug

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="col-sm-5 right-section">
           <h2>HD Clarity</h2>
-          <img id="img-b" src="img/b.jpg" alt="girl hand holding phone">
+          <img id="img-b" src="img/handHoldingPhone.jpg" alt="girl hand holding phone">
         </div>
       </div>
     </div>
