Updates to stylesheet

--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 
-<body>
+<body style="background: #f3f3f3;">
   <section id="shop">
     <div class="container-full">
       <div class="row ">
@@ -23,7 +23,7 @@
                     <img src="img/a.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="img/b.jpg" alt="">
+                    <img src="img/a.jpg" alt="">
                 </div>
               </div>
             </div>
