Updates to carousel page

--- a/shop.html
+++ b/shop.html
@@ -9,28 +9,36 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 </head>
 
-<body style="background: #f3f3f3;">
+<body>
   <section id="shop">
     <div class="container-full">
       <div class="row ">
-
         <div class="col-sm-7">
           <div id="product-views-carousel" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="img/a.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/a.jpg" alt="">
-                </div>
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                  <img src="img/phone-hand.png" alt="">
+              </div>
+              <div class="item">
+                  <img src="img/a.jpg" alt="">
               </div>
             </div>
+          </div>
         </div>
         <div class=" col-sm-5 product-details-row">
           <h2>Super Thin iPhone 7 Case</h2>
           <h6>$24.99</h6>
+          <a class="active-tab" href="#">iPhone 6</a>
+          <br>
+          <br>
+          <div class="separator"></div>
+          <a href="#">Color</a>
+          <div class="separator"></div>
+          <br>
           <a href="#" class="add-to-cart-cta">Add to Cart</a>
         </div>
 
@@ -63,6 +71,7 @@
       </div>
     </div>
   </section>
+
 </body>
 
 
@@ -71,7 +80,7 @@
 
 <script>
 $('.carousel').carousel({
-interval: 5000
+interval: 500000
 })
 </script>
 
