Adding to carousel

--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
                   <img src="img/phone-hand.png" alt="">
               </div>
               <div class="item">
-                  <img src="img/a.jpg" alt="">
+                  <img src="img/phone-hand-2.png" alt="">
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
 
 <script>
 $('.carousel').carousel({
-interval: 500000
+interval: 5000
 })
 </script>
 
