--- a/shop.html
+++ b/shop.html
@@ -21,10 +21,10 @@
           <div id="product-views-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                  <img src="img/phone-hand.png" alt="">
+                <img src="img/phone-hand.png" alt="">
               </div>
               <div class="item">
-                  <img src="img/phone-hand-2.png" alt="">
+                <img src="img/phone-hand-2.png" alt="">
               </div>
             </div>
           </div>
@@ -41,47 +41,32 @@
           <br>
           <a href="#" class="add-to-cart-cta">Add to Cart</a>
         </div>
-
-
-
-            <!-- <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                  <img src="img/a.jpg" alt="">
-              </div>
-              <div class="item">
-                  <img src="img/b.jpg" alt="">
-              </div>
-            </div> -->
-
-            <ol class="carousel-indicators">
-              <li data-target="#view-b" data-slide-to="0" class="active"></li>
-              <li data-target="#view-a" data-slide-to="1"></li>
-            </ol>
-            <div class="carousel-controller-row">
-              <a class="left " href="#view-b" role="button" data-slide="prev">
-                <span class="ion-ios-arrow-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right" href="#view-a" role="button" data-slide="next">
-                <span class="ion-ios-arrow-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
+        <ol class="carousel-indicators">
+          <li data-target="#product-views-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#product-views-carousel" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-controller-row">
+          <a class="left " href="#product-views-carousel" role="button" data-slide="prev">
+            <span class="ion-ios-arrow-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right" href="#product-views-carousel" role="button" data-slide="next">
+            <span class="ion-ios-arrow-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
     </div>
   </section>
-
 </body>
-
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <script>
-$('.carousel').carousel({
-interval: 5000
-})
+  $('.carousel').carousel({
+  interval: 3000
+  })
 </script>
 
 </html>
