--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
                 <img src="img/phone-hand.png" alt="">
               </div>
               <div class="item">
-                <img src="img/phone-hand-2.png" alt="">
+                <img src="img/phone-hand-b.png" alt="">
               </div>
             </div>
           </div>
