--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,6 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
 </head>
 
 <body>
@@ -63,11 +62,7 @@
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-<script>
-  $('.carousel').carousel({
-  interval: 3000
-  })
+<script> $('.carousel').carousel({ interval: 3000 })
 </script>
 
 </html>
