--- a/index.html
+++ b/index.html
@@ -43,5 +43,30 @@
       </div>
     </div>
   </section>
+  <footer id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <p>BuyColor</p>
+          <p>All rights reserved. © 2016.</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Navigate</p>
+          <a href="index.html">Home</a>
+          <a href="shop.html">Shop</a>
+        </div>
+        <div class="col-sm-3">
+          <p>Products</p>
+          <a href="shop.html">iPhone 6 Case</a>
+        </div>
+        <div class="col-sm-3">
+          <p>Stay Updated</p>
+          <i class="ion-social-facebook"></i>
+          <i class="ion-social-twitter"></i>
+          <i class="ion-social-instagram"></i>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
