Updates to carousel images

--- a/shop.html
+++ b/shop.html
@@ -21,10 +21,22 @@
           <div id="product-views-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="img/phone-hand.png" alt="">
+                <img src="img/blueonwhite.png" alt="">
               </div>
               <div class="item">
-                <img src="img/phone-hand-b.png" alt="">
+                <img src="img/blueonblack.png" alt="">
+              </div>
+              <div class="item">
+                <img src="img/pinkonwhite.png" alt="">
+              </div>
+              <div class="item">
+                <img src="img/pinkonblack.png" alt="">
+              </div>
+              <div class="item">
+                <img src="img/greenonwhite.png" alt="">
+              </div>
+              <div class="item">
+                <img src="img/greenonblack.png" alt="">
               </div>
             </div>
           </div>
