--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
         </div>
       </div>
     </section>
+    <!-- <div class="row text-center" style="margin:0 auto;">
+      <img class="img-responsive text-center" style="margin: 0 auto;" src="img/footershot.png" alt="">
+    </div> -->
     <footer id="footer">
       <div class="container">
         <div class="row">
           <div class="col-sm-3">
             <p>BuyColor</p>
-            <p>All rights reserved. © 2016.</p>
+            <p class="copyright">All rights reserved. © 2016.</p>
           </div>
           <div class="col-sm-3">
             <p>Navigate</p>
