--- a/shop.html
+++ b/shop.html
@@ -56,6 +56,10 @@
         <ol class="carousel-indicators">
           <li data-target="#product-views-carousel" data-slide-to="0" class="active"></li>
           <li data-target="#product-views-carousel" data-slide-to="1"></li>
+          <li data-target="#product-views-carousel" data-slide-to="2"></li>
+          <li data-target="#product-views-carousel" data-slide-to="3"></li>
+          <li data-target="#product-views-carousel" data-slide-to="4"></li>
+          <li data-target="#product-views-carousel" data-slide-to="5"></li>
         </ol>
         <div class="carousel-controller-row">
           <a class="left " href="#product-views-carousel" role="button" data-slide="prev">
@@ -75,7 +79,7 @@
       <div class="row">
         <div class="col-sm-3">
           <p>BuyColor</p>
-          <p>All rights reserved. © 2016.</p>
+          <p class="copyright">All rights reserved. © 2016.</p>
         </div>
         <div class="col-sm-3">
           <p>Navigate</p>
@@ -99,7 +103,7 @@
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script> $('.carousel').carousel({ interval: 3000 })
+<script> $('.carousel').carousel({ interval: 4000 })
 </script>
 
 </html>
