--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 </head>
   <body>
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="img-responsive navbar-brand" href="index.html">
+          <img alt="Brand" src="img/colorlogo.png">
+          </a>
+        </div>
+      </div>
+    </nav>
     <section id="hero">
       <div class="container">
         <div class="row">
@@ -23,6 +32,21 @@
         </div>
       </div>
     </section>
+    <div id="three-row">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-responsive" src="img/scratchresistant.png" alt="">
+          </div>
+          <div class="col-sm-4">
+            <img class="img-responsive" src="img/antishatter.png" alt="">
+          </div>
+          <div class="col-sm-4">
+            <img class="img-responsive" src="img/trueclarity.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
     <section id="value-props">
       <div class="container-fluid">
         <div class="row">
