--- a/shop.html
+++ b/shop.html
@@ -14,6 +14,15 @@
 </head>
 
 <body>
+  <nav class="navbar">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html">
+        <img alt="Brand" src="img/colorlogo.png">
+        </a>
+      </div>
+    </div>
+  </nav>
   <section id="shop">
     <div class="container-full">
       <div class="row ">
