Updates to copy and contact

--- a/shop.html
+++ b/shop.html
@@ -15,12 +15,13 @@
 
 <body>
   <nav class="navbar">
-    <div class="container">
+    <div class="container" style="position: relative;">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">
         <img alt="Brand" src="img/colorlogo.png">
         </a>
       </div>
+      <a class="text-right" href="mailto:spencer@supplyr.co">Contact</a>
     </div>
   </nav>
   <section id="shop">
@@ -51,7 +52,7 @@
           </div>
         </div>
         <div class=" col-sm-5 product-details-row">
-          <h2>Super Thin iPhone 7 Case</h2>
+          <h2>Color Glass Screen Protector</h2>
           <h6>$24.99</h6>
           <a class="active-tab" href="#">iPhone 6</a>
           <br>
