--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
   <body>
     <nav class="navbar">
-      <div class="container">
+      <div class="container" style="position: relative;">
         <div class="navbar-header">
-          <a class="img-responsive navbar-brand" href="index.html">
+          <a class="navbar-brand" href="index.html">
           <img alt="Brand" src="img/colorlogo.png">
           </a>
         </div>
+        <a class="text-right" href="mailto:spencer@supplyr.co">Contact</a>
       </div>
     </nav>
     <section id="hero">
