Changing hero images for spencer

--- a/index.html
+++ b/index.html
@@ -21,8 +21,38 @@
       </div>
     </nav>
     <section id="hero">
-      <div class="container">
-        <div class="row">
+      <div class="container-fluid">
+        <div class="item">
+          <img src="img/hero/shortcutbuttons.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/blue.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/green.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/pink.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/yellow.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/orange.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/matteblack.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+
+        <!--  Previous Hero  -->
+        <!-- <div class="row">
           <div class="col-sm-offset-1 col-sm-4">
             <h1>High End. Colorful. Screen Protection.</h1>
             <a href="shop.html">Shop Now</a>
@@ -30,6 +60,10 @@
           <div class="col-sm-offset-1 col-sm-6 hero-img-holder">
             <img src="img/hero.png" alt="">
           </div>
+        </div> -->
+
+        <div class="row">
+
         </div>
       </div>
     </section>
