--- a/index.html
+++ b/index.html
@@ -22,32 +22,39 @@
     </nav>
     <section id="hero">
       <div class="container-fluid">
+        <div class="row">
+          <div class="item">
+            <img src="img/hero/web_mockup_cobalt-blue.png" alt="">
+          </div>
+        </div>
+        <br>
+        <br>
         <div class="item">
-          <img src="img/hero/shortcutbuttons.png" alt="">
+          <img src="img/hero/web_shortcut_logo.png" alt="">
           <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/blue.png" alt="">
+          <img src="img/hero/web_blue.png" alt="">
           <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/green.png" alt="">
+          <img src="img/hero/web_green.png" alt="">
           <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/pink.png" alt="">
+          <img src="img/hero/web_pink.png" alt="">
           <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/yellow.png" alt="">
+          <img src="img/hero/web_yellow.png" alt="">
           <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/orange.png" alt="">
+          <img src="img/hero/web_orange.png" alt="">
           <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/matteblack.png" alt="">
+          <img src="img/hero/web_matteblack.png" alt="">
           <a href="#">Shop now</a>
         </div>
 
