Updating hero images

--- a/index.html
+++ b/index.html
@@ -24,38 +24,29 @@
       <div class="container-fluid">
         <div class="row">
           <div class="item">
-            <img src="img/hero/web_mockup_cobalt-blue.png" alt="">
+            <img src="img/hero/web_shortcut_logo.png" alt="">
+            <a href="#">Shop now</a>
           </div>
         </div>
-        <br>
-        <br>
+
         <div class="item">
-          <img src="img/hero/web_shortcut_logo.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/persionpink.jpg" alt="">
         </div>
         <div class="item">
-          <img src="img/hero/web_blue.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/cobaltblue.jpg" alt="">
         </div>
         <div class="item">
-          <img src="img/hero/web_green.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/lemonyellow.jpg" alt="">
         </div>
         <div class="item">
-          <img src="img/hero/web_pink.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/marigoldorange.jpg" alt="">
+
         </div>
         <div class="item">
-          <img src="img/hero/web_yellow.png" alt="">
-          <a href="#">Shop now</a>
-        </div>
-        <div class="item">
-          <img src="img/hero/web_orange.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/seafoamgreen.jpg" alt="">
         </div>
         <div class="item">
           <img src="img/hero/web_matteblack.png" alt="">
-          <a href="#">Shop now</a>
         </div>
 
         <!--  Previous Hero  -->
@@ -77,13 +68,13 @@
     <div id="three-row">
       <div class="container">
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-xs-4">
             <img class="img-responsive" src="img/scratchresistant.png" alt="">
           </div>
-          <div class="col-sm-4">
+          <div class="col-xs-4">
             <img class="img-responsive" src="img/antishatter.png" alt="">
           </div>
-          <div class="col-sm-4">
+          <div class="col-xs-4">
             <img class="img-responsive" src="img/trueclarity.png" alt="">
           </div>
         </div>
