--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href= "../css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 </head>
   <body>
@@ -24,30 +25,44 @@
       <div class="container-fluid">
         <div class="row">
           <div class="item">
-            <img src="img/hero/web_shortcut_logo.png" alt="">
-            <a href="#">Shop now</a>
+            <img src="img/hero/web_mockup_cobalt-blue.png" alt="">
           </div>
         </div>
 
         <div class="item">
-          <img src="img/hero/persionpink.jpg" alt="">
+          <img src="img/hero/colorheroimage2.jpg" alt="">
+          <!-- <a href="#">Shop now</a> -->
         </div>
-        <div class="item">
-          <img src="img/hero/cobaltblue.jpg" alt="">
-        </div>
-        <div class="item">
-          <img src="img/hero/lemonyellow.jpg" alt="">
-        </div>
-        <div class="item">
-          <img src="img/hero/marigoldorange.jpg" alt="">
 
+        <div class="item">
+          <img src="img/hero/web_shortcut_logo.png" alt="">
+          <a href="#">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/seafoamgreen.jpg" alt="">
+          <img src="img/hero/web_blue.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/web_green.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/web_pink.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/web_yellow.png" alt="">
+          <a href="#">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/web_orange.png" alt="">
+          <a href="#">Shop now</a>
         </div>
         <div class="item">
           <img src="img/hero/web_matteblack.png" alt="">
+          <a href="#">Shop now</a>
         </div>
+
 
         <!--  Previous Hero  -->
         <!-- <div class="row">
@@ -129,4 +144,16 @@
       </div>
     </footer>
   </body>
+
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
+  <script>
+    $('a').click(function(){
+        $('html, body').animate({
+            scrollTop: $( $(this).attr('href') ).offset().top
+        }, 500);
+        return false;
+    });
+  </script>
+
 </html>
