--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 </head>
   <body>
-    <nav class="navbar">
-      <div class="container" style="position: relative;">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">
-          <img alt="Brand" src="img/colorlogo.png">
-          </a>
+    <nav>
+      <div class="container text-center">
+        <div class="row">
+          <img class="brand-logo" alt="Brand" src="img/colorlogo.png">
         </div>
-        <a class="text-right" href="mailto:spencer@supplyr.co">Contact</a>
       </div>
     </nav>
     <section id="hero">
@@ -36,7 +33,7 @@
 
         <div class="item">
           <img src="img/hero/web_shortcut_logo.png" alt="">
-          <a href="#">Shop now</a>
+          <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
           <img src="img/hero/web_blue.png" alt="">
@@ -129,6 +126,7 @@
             <p>Navigate</p>
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
+            <a href="mailto:spencer@supplyr.co">Contact</a>
           </div>
           <div class="col-sm-3">
             <p>Products</p>
