Updates to carousel design, also update to color patterns

--- a/index.html
+++ b/index.html
@@ -30,34 +30,53 @@
           <img src="img/hero/colorheroimage2.jpg" alt="">
           <!-- <a href="#">Shop now</a> -->
         </div>
-
-        <div class="item">
+        <!-- <div class="item">
           <img src="img/hero/web_shortcut_logo.png" alt="">
+          <a href="shop.html">Shop now</a>
+        </div> -->
+        <div class="item">
+          <img src="img/hero/midnight-blue.png" alt="">
           <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/web_blue.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/blue-camo.png" alt="">
+          <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/web_green.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/island-paradise.png" alt="">
+          <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/web_pink.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/seafoam-green.png" alt="">
+          <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/web_yellow.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/persian-pink.png" alt="">
+          <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/web_orange.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/barbie-pink.png" alt="">
+          <a href="shop.html">Shop now</a>
         </div>
         <div class="item">
-          <img src="img/hero/web_matteblack.png" alt="">
-          <a href="#">Shop now</a>
+          <img src="img/hero/flame-red.png" alt="">
+          <a href="shop.html">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/lemon-yellow.png" alt="">
+          <a href="shop.html">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/marigold-orange.png" alt="">
+          <a href="shop.html">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/matte-black.png" alt="">
+          <a href="shop.html">Shop now</a>
+        </div>
+        <div class="item">
+          <img src="img/hero/pale-dogwood.png" alt="">
+          <a href="shop.html">Shop now</a>
         </div>
 
 
