--- a/shop.html
+++ b/shop.html
@@ -23,13 +23,13 @@
   </nav>
 
   <section id="shop">
-    <div class="container-full">
+    <div class="container">
       <div class="row ">
         <div class="col-sm-7">
           <div id="product-views-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="img/blueonwhite.png" alt="">
+                <img src="img/shop/cobalt-blue.png" class="img-responsive" alt="">
               </div>
               <div class="item">
                 <img src="img/blueonblack.png" alt="">
@@ -71,17 +71,27 @@
           <div class="color-holder" style="position: relative;">
             <span class="color-header">Color:</span>
             <ul class="select-color-list">
-              <li id="blue" class="active blue-color-button"></li>
-              <li id="green" class="green-color-button"></li>
-              <li id="black" class="black-color-button"></li>
-              <li id="orange" class="orange-color-button"></li>
-              <li id="pink" class="pink-color-button"></li>
-              <li id="yellow" class="yellow-color-button"></li>
+              <li id="cobalt-blue" class="cobalt-blue"></li>
+              <li id="midnight-blue" class="midnight-blue"></li>
+              <li id="blue-camo" class="blue-camo"></li>
+              <li id="island-paradise" class="island-paradise"></li>
+              <li id="seafoam-green" class="seafoam-green"></li>
+              <li id="persian-pink" class="persian-pink"></li>
+            </ul>
+            <ul class="select-color-list-2">
+              <li id="barbie-pink" class="barbie-pink"></li>
+              <li id="flame-red" class="flame-red"></li>
+              <li id="lemon-yellow" class="lemon-yellow"></li>
+              <li id="marigold-orange" class="marigold-orange"></li>
+              <li id="matte-black" class="matte-black"></li>
+              <li id="pale-dogwood" class="pale-dogwood"></li>
             </ul>
           </div>
-
+          <br>
+          <br>
           <div class="separator"></div>
           <br>
+
           <a href="#" class="add-to-cart-cta">Add to Cart</a>
         </div>
 
