--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <img src="img/hero/colorheroimage2.jpg" alt="">
           <!-- <a href="#">Shop now</a> -->
         </div>
-        <!-- <div class="item">
-          <img src="img/hero/web_shortcut_logo.png" alt="">
+        <div class="item">
+          <img src="img/hero/cobalt-blue.png" alt="">
           <a href="shop.html">Shop now</a>
-        </div> -->
+        </div>
         <div class="item">
           <img src="img/hero/midnight-blue.png" alt="">
           <a href="shop.html">Shop now</a>
