Updates to include gif, also adding id tags to each image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>ColorGlass</title>
+  <title>Color</title>
   <link href= "../css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -26,8 +26,9 @@
           </div>
         </div>
 
-        <div class="item">
+        <div class="item find-color-container">
           <img src="img/hero/colorheroimage2.jpg" alt="">
+          <h2>#findyourcolor</h2>
           <!-- <a href="#">Shop now</a> -->
         </div>
         <div class="item">
@@ -112,22 +113,9 @@
       </div>
     </div>
     <section id="value-props">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div class="col-sm-7 left-section" >
-            <h2>Plays Nice with Cases</h2>
-            <div class="top-holder text-center">
-              <img id="img-a" src="img/a.JPG" alt="guy holding phone">
-            </div>
-            <div class="bottom-holder text-center">
-                <!-- <h2>plays nice with cases</h2> -->
-              <img id="img-c" src="img/c.JPG" alt="woman holding phone with case">
-            </div>
-          </div>
-          <div class="col-sm-5 right-section">
-            <h2>HD Clarity</h2>
-            <img id="img-b" src="img/handHoldingPhone.jpg" alt="girl hand holding phone">
-          </div>
+          <img src="img/color-2.gif" class="img-responsive">
         </div>
       </div>
     </section>
