--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ColorGlass</title>
+    <title>Color</title>
     <link href="../css/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -29,22 +29,41 @@
           <div id="product-views-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="img/shop/cobalt-blue.png" class="img-responsive" alt="">
+                <img id="cobalt-blue-img" src="img/shop/cobalt-blue.png"  class="img-responsive" alt="">
               </div>
               <div class="item">
-                <img src="img/blueonblack.png" alt="">
+                <img id="midnight-blue-img" src="img/shop/midnight-blue.png"  class="img-responsive" alt="">
               </div>
               <div class="item">
-                <img src="img/pinkonwhite.png" alt="">
+                <img id="blue-camo-img" src="img/shop/blue-camo.png"  class="img-responsive" alt="">
               </div>
               <div class="item">
-                <img src="img/pinkonblack.png" alt="">
+                <img id="island-paradise-img" src="img/shop/island-paradise.png"  class="img-responsive" alt="">
               </div>
               <div class="item">
-                <img src="img/greenonwhite.png" alt="">
+                <img id="seafoam-green-img" src="img/shop/seafoam-green.png"  class="img-responsive" alt="">
               </div>
               <div class="item">
-                <img src="img/greenonblack.png" alt="">
+                <img id="persian-pink-img" src="img/shop/persian-pink.png"  class="img-responsive" alt="">
+              </div>
+
+              <div class="item">
+                <img id="barbie-pink-img" src="img/shop/barbie-pink.png"  class="img-responsive" alt="">
+              </div>
+              <div class="item">
+                <img id="flame-red-img" src="img/shop/flame-red.png"  class="img-responsive" alt="">
+              </div>
+              <div class="item">
+                <img id="lemon-yellow-img" src="img/shop/lemon-yellow.png"  class="img-responsive" alt="">
+              </div>
+              <div class="item">
+                <img id="merigold-orange-img" src="img/shop/merigold-orange.png"  class="img-responsive" alt="">
+              </div>
+              <div class="item">
+                <img id="matte-black-img" src="img/shop/matte-black.png"  class="img-responsive" alt="">
+              </div>
+              <div class="item">
+                <img id="pale-dogwood-img" src="img/shop/pale-dogwood.png"  class="img-responsive" alt="">
               </div>
             </div>
           </div>
