--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
   </nav>
 
   <section id="shop">
-    <div class="container">
+    <div class="container" style="margin-top: -60px;">
       <div class="row ">
         <div class="col-sm-7">
           <div id="product-views-carousel" class="carousel slide" data-ride="carousel">
